--- a/core/resources/src/main/res/values-da/strings.xml
+++ b/core/resources/src/main/res/values-da/strings.xml
@@ -2014,4 +2014,12 @@
     <string name="model_birefnet">Letvægts BiRefNet-model baseret på Swin Transformer til nøjagtig baggrundsfjernelse.</string>
     <string name="model_inspyrenet">Baggrundsfjernelse i høj kvalitet med skarpe kanter og fremragende detaljebevarelse, især på komplekse genstande og vanskelige baggrunde.</string>
     <string name="model_isnet">Baggrundsfjernelsesmodel, der producerer nøjagtige masker med glatte kanter, velegnet til generelle genstande og moderat detaljebevarelse.</string>
+    <string name="model_already_downloaded">Modellen er allerede downloadet</string>
+    <string name="model_successfully_imported">Modellen blev importeret</string>
+    <string name="type">Type</string>
+    <string name="keyword">Søgeord</string>
+    <string name="very_fast">Meget hurtig</string>
+    <string name="normal">Normal</string>
+    <string name="slow">Langsom</string>
+    <string name="very_slow">Meget langsom</string>
 </resources>
