--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -2016,4 +2016,12 @@
     <string name="model_birefnet">Lekki model BiRefNet oparty na transformatorze Swin do dokładnego usuwania tła.</string>
     <string name="model_inspyrenet">Wysokiej jakości usuwanie tła z ostrymi krawędziami i doskonałym zachowaniem szczegółów, szczególnie w przypadku skomplikowanych obiektów i trudnych środowisk.</string>
     <string name="model_isnet">Model usuwania tła, który tworzy dokładne maski o gładkich krawędziach, odpowiednie dla obiektów ogólnych i umiarkowanego zachowania szczegółów.</string>
+    <string name="model_already_downloaded">Model już pobrany</string>
+    <string name="model_successfully_imported">Model został pomyślnie zaimportowany</string>
+    <string name="type">Typ</string>
+    <string name="keyword">Słowo kluczowe</string>
+    <string name="very_fast">Bardzo szybko</string>
+    <string name="normal">Normalna</string>
+    <string name="slow">Powolny</string>
+    <string name="very_slow">Bardzo powolny</string>
 </resources>
