--- a/core/resources/src/main/res/values-sv/strings.xml
+++ b/core/resources/src/main/res/values-sv/strings.xml
@@ -2015,4 +2015,12 @@
     <string name="model_birefnet">Lätt BiRefNet-modell baserad på Swin Transformer för exakt bakgrundsborttagning.</string>
     <string name="model_inspyrenet">Högkvalitativ bakgrundsborttagning med skarpa kanter och utmärkt bevarande av detaljer, särskilt på komplexa föremål och knepiga bakgrunder.</string>
     <string name="model_isnet">Bakgrundsborttagningsmodell som ger exakta masker med släta kanter, lämplig för allmänna föremål och måttlig detaljbevarande.</string>
+    <string name="model_already_downloaded">Modellen har redan laddats ned</string>
+    <string name="model_successfully_imported">Modellen har importerats</string>
+    <string name="type">Typ</string>
+    <string name="keyword">Nyckelord</string>
+    <string name="very_fast">Mycket snabb</string>
+    <string name="normal">Normal</string>
+    <string name="slow">Långsam</string>
+    <string name="very_slow">Mycket långsam</string>
 </resources>
