--- a/core/resources/src/main/res/values-fi/strings.xml
+++ b/core/resources/src/main/res/values-fi/strings.xml
@@ -2014,4 +2014,12 @@
     <string name="model_birefnet">Kevyt BiRefNet-malli, joka perustuu Swin Transformeriin tarkan taustan poistamiseen.</string>
     <string name="model_inspyrenet">Laadukas taustan poisto terävillä reunoilla ja erinomaisella yksityiskohdilla, erityisesti monimutkaisissa kohteissa ja hankalassa taustassa.</string>
     <string name="model_isnet">Taustanpoistomalli, joka tuottaa tarkat maskit sileillä reunoilla, sopii yleisiin esineisiin ja kohtuulliseen yksityiskohtien säilytykseen.</string>
+    <string name="model_already_downloaded">Malli on jo ladattu</string>
+    <string name="model_successfully_imported">Mallin tuonti onnistui</string>
+    <string name="type">Tyyppi</string>
+    <string name="keyword">avainsana</string>
+    <string name="very_fast">Erittäin nopea</string>
+    <string name="normal">Normaali</string>
+    <string name="slow">Hidas</string>
+    <string name="very_slow">Erittäin hidas</string>
 </resources>
