--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2016,4 +2016,12 @@
     <string name="model_birefnet">Легкая модель BiRefNet на основе Swin Transformer для точного удаления фона.</string>
     <string name="model_inspyrenet">Качественное удаление фона с острыми краями и отличным сохранением деталей, особенно на сложных объектах и ​​сложном фоне.</string>
     <string name="model_isnet">Модель удаления фона, которая создает точные маски с гладкими краями, подходящую для обычных объектов и умеренного сохранения деталей.</string>
+    <string name="model_already_downloaded">Модель уже скачана</string>
+    <string name="model_successfully_imported">Модель успешно импортирована</string>
+    <string name="type">Тип</string>
+    <string name="keyword">Ключевое слово</string>
+    <string name="very_fast">Очень быстро</string>
+    <string name="normal">Нормальный</string>
+    <string name="slow">Медленный</string>
+    <string name="very_slow">Очень медленно</string>
 </resources>
